force-app/main/default/objects/ccrz__E_Review__c/ccrz__E_Review__c.object-meta.xml
<CustomObject>
    <description>Reviews</description>
    <label>CC Review</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Review Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>