force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__IsHelpfulCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IsHelpfulCount__c</fullName>
    <description>Number of viewers think this review is helpful</description>
    <label>IsHelpfulCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>