force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__NumOfViewers__c.field-meta.xml
<CustomField>
    <fullName>ccrz__NumOfViewers__c</fullName>
    <description>Number of people view this review</description>
    <label>Number of Viewers</label>
    <summaryForeignKey>ccrz__E_ReviewLike__c.ccrz__Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>