force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__Rating__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Rating__c</fullName>
    <formula>if(isnumber(text(ccrz__RatingCode__c)), value( text(ccrz__RatingCode__c) ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>