force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__ReviewId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ReviewId__c</fullName>
    <externalId>true</externalId>
    <label>Review Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>