force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Status__c</fullName>
    <description>Customer review status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>