force-app/main/default/objects/ccrz__E_Review__c/fields/ccrz__Subject__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Subject__c</fullName>
    <description>Subject</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>